[project]
name = "pyradio"
version = "0.9.3.11.15"
authors = [
  { name="Ben Dowling", email="ben.m.dowling@gmail.com" },
  { name="Spiros Georgaras", email="sng@hellug.gr" },
]
description = "Command line internet radio player"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
cli = [
  "mpv",
  "mplayer",
  "vlc"
]

[project.scripts]
pyradio = "pyradio.main:shell"
pyradio-client = "pyradio.main:run_client"

[project.urls]
"Homepage" = "https://github.com/coderholic/pyradio"
"Bug Tracker" = "https://github.com/coderholic/pyradio/issues"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
