[project]
name = "pyradio"
version = "0.9.3.11.23"
authors = [
  { name="Ben Dowling", email="ben.m.dowling@gmail.com" },
  { name="Spiros Georgaras", email="sng@hellug.gr" },
]
description = "Command line internet radio player"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'importlib_resources; python_version<"3.9"',
    'importlib_resources; python_version=="3.10"'
]

[project.optional-dependencies]
cli = [
  "mpv",
  "mplayer",
  "vlc"
]

[project.scripts]
pyradio = "pyradio.main:shell"
pyradio-client = "pyradio.main:run_client"

[project.urls]
"Homepage" = "https://github.com/coderholic/pyradio"
"Bug Tracker" = "https://github.com/coderholic/pyradio/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = [
    "pyradio",
    "pyradio.icons",
    "pyradio.keyboard",
    "pyradio.scripts",
    "pyradio.themes"
]
exclude = [
    "pyradio.__pycache__",
    "pyradio.*.__pycache__",
    "pyradio.*.tests",
    "pyradio..ruff_cache"
]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
